# transaction_server

./: .gitignore  LICENSE  README.md
agent/: .gitignore  README.md  main.py  requirements.txt
agent/agent/: db.py  external_agent.py  local_model.py  recommendation.py  schemas.py
agent/tests/: test_db.py  test_local_model.py  test_local_model_real.py
backend/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  setup_for_build.ps1
backend/migrations/: 1_20250628_create_categories.sql  apply-migrations.ps1
backend/src/: config.rs  db_models.rs  db_traits.rs  gql_schema.rs  graphql.rs  lib.rs  main.rs
backend/tests/: db_category_tests.rs  db_container_tests.rs  db_transaction_tests.rs  gql_category_test.rs  gql_container_test.rs  gql_transaction_tests.rs
backend/tests/common/: db_mocks.rs  macros.rs  mod.rs  test_utils.rs
backend/tests/migrations/: 0_20250628_common.sql  1_20250628_create_categories.sql  2_20250628_create_transactions.sql
backend/tools/category_importer/: .gitignore  Cargo.toml  README.md
backend/tools/category_importer/src/: main.rs
classifier/: .gitignore  README.md  requirements.txt
classifier/data/processed/: transactions_clean.csv
classifier/data/raw/: transactions.csv
classifier/models/bert_classifier/: config.json
classifier/scripts/: infer.py  preprocess.py  train.py
classifier/utils/: config.py
frontend/: .gitignore  README.md  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  graphqlClient.ts  main.tsx  vite-env.d.ts
frontend/src/components/: Dashboard.tsx  Recommendations.tsx  Reports.tsx  SplitLayout.tsx  StartEndDatePicker.tsx  TransactionsTable.tsx
frontend/src/components/__tests__/: Reports.test.tsx  StartEndDatePicker.test.tsx  TransactionTable.test.tsx  utils.tsx
frontend/src/hooks/: categories.ts  datefilters.ts  localstorage.ts  transactions.ts
