[package]
name = "transaction-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "bigdecimal", "time"] }
tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4.11.0"
actix-files = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9"
env_logger = "^0.11"
log = "^0.4"
jsonwebtoken = "^9.3"
chrono = "^0.4"
juniper = { version = "^0.16", features = ["chrono"] }
juniper_actix = { version = "0.6.0" }
actix-cors = "^0.7"
serde_derive = "^1.0"
dotenv = "^0.15"
rust_decimal = "1.37.2"
actix-rt = "2.10.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "2.0.12"
