[package]
name = "transaction_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "bigdecimal", "time"] }
tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4.11.0"
env_logger = "^0.11"
chrono = { version = "^0.4", features = ["serde"] }
juniper = { version = "^0.16", features = ["chrono"] }
juniper_actix = { version = "0.6.0" }
actix-cors = "^0.7"
dotenv = "^0.15"
rust_decimal = "1.37.2"
time = { version = "0.3", features = ["formatting", "parsing"] }
async-trait = "0.1.88"
mockall = "0.11.4"

[dev-dependencies]
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }
bigdecimal = "0.3"

[features]
default = []
test-utils = []

# dev-dependencies.transaction_server is needed to run integration tests
# force the test-utils feature to be enabled
[dev-dependencies.transaction_server]
path = "."
features = ["test-utils"]

