[package]
name = "category_importer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "bigdecimal", "time"] }
tokio = { version = "1.45.1", features = ["full"] }
csv = "1.3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "^0.15"
time = "0.3.24"
num-traits = "0.2.19"
